[gd_scene load_steps=4 format=3 uid="uid://battle"]

[ext_resource type="Script" path="res://scripts/battle/battle_scene.gd" id="1_script"]
[ext_resource type="Script" path="res://scripts/rendering/tile_renderer.gd" id="2_tile"]
[ext_resource type="Script" path="res://scripts/rendering/isometric_camera.gd" id="3_camera"]

[node name="Battle" type="Node2D"]
script = ExtResource("1_script")

[node name="TileRenderer" type="Node2D" parent="."]
script = ExtResource("2_tile")

[node name="Entities" type="Node2D" parent="."]

[node name="Crews" type="Node2D" parent="Entities"]

[node name="Enemies" type="Node2D" parent="Entities"]

[node name="Projectiles" type="Node2D" parent="Entities"]

[node name="Effects" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("3_camera")

[node name="HUD" type="CanvasLayer" parent="."]
layer = 10

[node name="TopBar" type="HBoxContainer" parent="HUD"]
offset_left = 20.0
offset_top = 20.0
offset_right = 600.0
offset_bottom = 50.0
theme_override_constants/separation = 30

[node name="WaveLabel" type="Label" parent="HUD/TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Wave: 1/3"

[node name="EnemiesLabel" type="Label" parent="HUD/TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Enemies: 0"

[node name="FacilityHealthLabel" type="Label" parent="HUD/TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Facility: 100%"

[node name="CrewPanel" type="VBoxContainer" parent="HUD"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = -20.0
grow_vertical = 0
theme_override_constants/separation = 5

[node name="CrewPanelLabel" type="Label" parent="HUD/CrewPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "CREWS"

[node name="AbilityBar" type="HBoxContainer" parent="HUD"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -70.0
offset_right = 220.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 10

[node name="ScoutButton" type="Button" parent="HUD/AbilityBar"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "SCOUT"

[node name="FlareButton" type="Button" parent="HUD/AbilityBar"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "FLARE (2)"

[node name="ResupplyButton" type="Button" parent="HUD/AbilityBar"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "RESUPPLY (1)"

[node name="OrbitalButton" type="Button" parent="HUD/AbilityBar"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "ORBITAL (1)"

[node name="PauseButton" type="Button" parent="HUD"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 0
text = "PAUSE"

[node name="SelectedCrewInfo" type="PanelContainer" parent="HUD"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -150.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0

[node name="VBox" type="VBoxContainer" parent="HUD/SelectedCrewInfo"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="NameLabel" type="Label" parent="HUD/SelectedCrewInfo/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "No Selection"

[node name="ClassLabel" type="Label" parent="HUD/SelectedCrewInfo/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.8, 1)
text = ""

[node name="SquadLabel" type="Label" parent="HUD/SelectedCrewInfo/VBox"]
layout_mode = 2
text = ""

[node name="SkillButton" type="Button" parent="HUD/SelectedCrewInfo/VBox"]
visible = false
layout_mode = 2
text = "Use Skill"
